# pfm-mip-based-local-search

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/taillard_instances/: tai100_10_1.txt  tai100_10_10.txt  tai100_10_2.txt  tai100_10_3.txt  tai100_10_4.txt  tai100_10_5.txt  tai100_10_6.txt  tai100_10_7.txt  tai100_10_8.txt  tai100_10_9.txt  tai100_20_1.txt  tai100_20_10.txt  tai100_20_2.txt  tai100_20_3.txt  tai100_20_4.txt  tai100_20_5.txt  tai100_20_6.txt  tai100_20_7.txt  tai100_20_8.txt  tai100_20_9.txt  tai100_5_1.txt  tai100_5_10.txt  tai100_5_2.txt  tai100_5_3.txt  tai100_5_4.txt  tai100_5_5.txt  tai100_5_6.txt  tai100_5_7.txt  tai100_5_8.txt  tai100_5_9.txt  tai200_10_1.txt  tai200_10_10.txt  tai200_10_2.txt  tai200_10_3.txt  tai200_10_4.txt  tai200_10_5.txt  tai200_10_6.txt  tai200_10_7.txt  tai200_10_8.txt  tai200_10_9.txt  (+80 more)
data/vallada_etal_instances/: Vallada-bounds.csv
src/pfm_mip_based_local_search/: __init__.py  __main__.py  pfm_mip_model.py  pfm_mip_neighbourhood.py  pfm_problem_definition.py
